# syssoft1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  print.cpp  print.hpp
src/UI/: mainWindow.cpp  mainWindow.hpp  source.syssoft1
src/algorithm/: convertNumber.cpp  convertNumber.hpp  translator.cpp  translator.hpp
src/controllers/: UIController.cpp  UIController.hpp  mainWindowC.cpp  mainWindowC.hpp  validate.cpp  validate.hpp
src/errors/: error.hpp
src/middleware/: validate.cpp  validate.hpp
src/model/: UIModel.cpp  UIModel.hpp
src/sourceExample/: oct.syssoft1  source.syssoft1
tests/: alg.cpp
